maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:15: error: not found: value keepHandOnSideWall
    keepHandOnSideWall()
    ^